syntax = "proto3";

package proto.card;

option go_package = "github.com/npavlov/go-password-manager/proto/card";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

service CardService {
  rpc StoreCard (StoreCardRequest) returns (StoreCardResponse);
  rpc GetCards (GetCardsRequest) returns (GetCardsResponse);
  rpc GetCard (GetCardRequest) returns (GetCardResponse);
  rpc UpdateCard (UpdateCardRequest) returns (UpdateCardResponse);
  rpc DeleteCard (DeleteCardRequest) returns (DeleteCardResponse);
}

message StoreCardRequest {
  CardData card = 1;
}

message StoreCardResponse {
  string card_id = 1;
}

message GetCardsRequest {
}

message GetCardsResponse {
  repeated CardData cards = 1;
}

message GetCardRequest {
  string card_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCardResponse {
  CardData card = 1;
  google.protobuf.Timestamp last_update = 2;
}

message DeleteCardRequest {
  string card_id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteCardResponse {
  bool ok = 1;
}

message UpdateCardRequest {
  string card_id = 1  [(buf.validate.field).string.uuid = true];
  CardData data = 2;
}

message UpdateCardResponse {
  string card_id = 1;
}

message CardData {
  string card_number = 1 [(buf.validate.field).string = {pattern: "^[0-9]{13,19}$"}]; // Validate card number (13-19 digits)
  string expiry_date = 2 [(buf.validate.field).string = {pattern: "^(0[1-9]|1[0-2])\\/[0-9]{2}$"}]; // Validate expiry date (MM/YY format)
  string cvv = 3 [(buf.validate.field).string = {pattern: "^[0-9]{3,4}$"}]; // Validate CVV (3 or 4 digits)
  string cardholder_name = 4 [(buf.validate.field).string = {min_len: 1, max_len: 100}]; // Validate cardholder name (1-100 characters)
}